# QtAutoTestFramework

./: .gitignore  LICENSE  README.md  build_linux.sh
cpp-server-example/: CMakeLists.txt  README.md
cpp-server-example/qml/: main.qml
cpp-server-example/src/: main.cpp
cpp-server-lib/: CMakeLists.txt  README.md
cpp-server-lib/inc/qtautotest/: QtAutoTestServer.h  qtat_config.h  qtat_export.h
cpp-server-lib/src/: EventSender.cpp  EventSender.h  HttpServer.cpp  HttpServer.h  HttpServerLinux.cpp  HttpServerWin.cpp  JsonHelper.cpp  JsonHelper.h  Logger.cpp  Logger.h  ObjectFinder.cpp  ObjectFinder.h  QtAutoTestServer.cpp  RequestHandler.cpp  RequestHandler.h  ScreenCapture.cpp  ScreenCapture.h
py-client-example/: README.md  requirements.txt  test_health.py  test_linux.py  test_linux_full.py  test_login.py  test_observe.py
py-client-lib/: README.md  pyproject.toml
py-client-lib/qtautotest/: __init__.py  async_client.py  client.py  exceptions.py  models.py
