[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qtautotest"
version = "1.0.0"
description = "Python client library for Qt AutoTest Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Qt AutoTest Team"}
]
keywords = ["qt", "qml", "testing", "automation", "ui-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/QtAutoTestFramework"
Documentation = "https://github.com/QtAutoTestFramework#readme"
Repository = "https://github.com/QtAutoTestFramework"
Issues = "https://github.com/QtAutoTestFramework/issues"

[tool.setuptools.packages.find]
include = ["qtautotest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
